# DreamWeaver

./: ReadMe.md
Docs/: API&Backend.md  AgentSystem.md  Arquitecture.md  DemoScript.md  DevelopmentRoadmap.md  MVPExecutionPlan.md  MemoryDesign.md  ProductStructure.md  PromptDesign.md  UIUX.md  Vision.md
backend/: .env  Cargo.toml  dreamweaver.db
backend/src/: app.rs  main.rs  state.rs
backend/src/agents/: mod.rs
backend/src/creative_director/: director.rs
backend/src/handlers/: creative_director.rs  mod.rs
backend/src/models/: creative_brief.rs  mod.rs
backend/src/routes/: agents.rs  creative_director.rs  health.rs  mod.rs  streaming.rs  workflow.rs
backend/src/services/: agent_executor.rs  ai_service.rs  critic_agent.rs  designer_agent.rs  mod.rs  orchestrator.rs  researcher_agent.rs  writer_agent.rs
frontend/: app.js  index.html  style.css
