[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"
tower-http = { version = "0.7.0", features = ["cors"] }

futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"]}

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

futures-util = "0.3"

async-stream = "0.3"